WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277807
[JSC] Fix B3CanonicalizePrePostIncrements with control and alias analysis
https://bugs.webkit.org/show_bug.cgi?id=277807
Summary
[JSC] Fix B3CanonicalizePrePostIncrements with control and alias analysis
Yijia Huang
Reported
2024-08-08 09:45:02 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-08 09:45:33 PDT
<
rdar://problem/133468869
>
Yijia Huang
Comment 2
2024-08-08 09:58:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31774
EWS
Comment 3
2024-08-09 10:54:40 PDT
Committed
282052@main
(f29853f4b11b): <
https://commits.webkit.org/282052@main
> Reviewed commits have been landed. Closing PR #31774 and removing active labels.
Yijia Huang
Comment 4
2024-08-09 14:53:19 PDT
***
Bug 229175
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug